[gd_scene load_steps=5 format=3 uid="uid://cudf3nvq2v6nq"]

[ext_resource type="Theme" uid="uid://bocl36mt2a4bf" path="res://assets/primary_theme.tres" id="1_2jce8"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="2_i22ws"]
[ext_resource type="Resource" uid="uid://ci0fm6040mf8s" path="res://game_stats.tres" id="3_3osg5"]

[sub_resource type="LabelSettings" id="LabelSettings_mdqfg"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2jce8")
script = ExtResource("2_i22ws")
game_stats = ExtResource("3_3osg5")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 368.0
offset_bottom = 640.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game Over!"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Press \"Space\" to return
to the start menu"
label_settings = SubResource("LabelSettings_mdqfg")
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="ScoreHBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ScoreHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score:"

[node name="ScoreValueLabel" type="Label" parent="CenterContainer/VBoxContainer/ScoreHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0
"

[node name="HighScoreHBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HighScoreHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "HighScore:"

[node name="HighScoreValueLabel" type="Label" parent="CenterContainer/VBoxContainer/HighScoreHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0
"

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Go to menu"
metadata/_edit_use_anchors_ = true
